# web-chat

./: .gitignore
Backend/src/: login.rs
ISM/: .gitignore
ISM/Backend/: Cargo.toml
ISM/Backend/src/: get_message.rs  lib.rs  main.rs  websocket.rs
ISM/frontend-chat/: package-lock.json  package.json
ISM/frontend-chat/.next/: trace
ISM/frontend-chat/.next/server/: _error.js
ISM/frontend-chat/pages/: index.js
ISM/frontend-chat/pages/components/: Chat.js  Chat.module.css  Chats.jsx  Sidebar.js  SidebarChat.js  WalletSetup.jsx
frontend-chat/: package-lock.json  package.json
frontend-chat/.next/: trace
frontend-chat/.next/server/pages/: _app.js  _document.js  chat.js  index.js
frontend-chat/.next/static/chunks/: _error.js  webpack.js
frontend-chat/.next/static/webpack/: 322bdad9c685c44f.webpack.hot-update.json  6b0c677e34bca919.webpack.hot-update.json  92c805d95b7b0823.webpack.hot-update.json  webpack.000913bb8211668d.hot-update.js  webpack.02136ffbb7aedd35.hot-update.js  webpack.0453e046dffb0077.hot-update.js  webpack.05e39d584433011d.hot-update.js  webpack.084457e17f743a8b.hot-update.js  webpack.0a2cbc0cd40bd408.hot-update.js  webpack.0ba6546033225f19.hot-update.js  webpack.0c2a47e192401e18.hot-update.js  webpack.0ed3a3db14525d2e.hot-update.js  webpack.0fce74d400d28128.hot-update.js  webpack.1443a5951ed9fbb4.hot-update.js  (+197 more)
frontend-chat/pages/: index.js  index.module.css
frontend-chat/pages/chat/: index.js
frontend-chat/pages/components/: Chat.js  Chats.jsx  Sidebar.js  Sidebar.module.css  SidebarChat.js  WalletSetup.jsx
(+524 files in other folders)
