[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.redis]
version = "*"


[dependencies]
axum = {features=["ws"]}
futures-util = "0.3.26"
hmac = "0.12.1"
jwt = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
sha2 = "0.10.6"
tokio = { version = "1", features = ["full"] }
axum-macros = "0.3.5"
secp256k1 = "0.27.0"
hex = "0.4.3"
cargo-watch = "8.4.0"
mongodb = "2.4.0"
tower-http = {version="0.4.0",features=["full"]}
tower = "0.4.13"

